--- a/sgim/templates/base.html
+++ b/sgim/templates/base.html
@@ -8,7 +8,7 @@
 
     <link rel="shortcut icon" href="{{STATIC_URL}}images/favicon.ico" type="image/x-icon">
     <link href="{{STATIC_URL}}css/ionicons.min.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="{{BOWER_URL}}semantic-ui/dist/semantic.css">
+    <link rel="stylesheet" href="{{BOWER_URL}}semantic-ui/dist/semantic.min.css">
     <link rel="stylesheet" href="{{BOWER_URL}}snackbarjs/dist/snackbar.min.css">
     <!--Import materialize.css-->
     <link href="{{BOWER_URL}}bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -121,7 +121,7 @@
     
 </body>
 
-<script src="{{BOWER_URL}}semantic-ui/dist/semantic.js" type="text/javascript"></script>
+<script src="{{BOWER_URL}}semantic-ui/dist/semantic.min.js" type="text/javascript"></script>
 
 {% block scripts %}
 
