--- a/sgim/templates/base2.html
+++ b/sgim/templates/base2.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
 
     <link rel="shortcut icon" href="{{STATIC_URL}}images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="{{BOWER_URL}}semantic-ui/dist/semantic.css">
+    <link rel="stylesheet" href="{{BOWER_URL}}semantic-ui/dist/semantic.min.css">
     
     <link rel="stylesheet" href="{{STATIC_URL}}css/estilos.css">
 
