--- a/sgim/templates/base2.html
+++ b/sgim/templates/base2.html
@@ -33,17 +33,12 @@
     {% block contenido %}
 
     {% endblock contenido %}
-    
-    <script src="{{BOWER_URL}}jquery/dist/jquery.min.js"></script>
-    <script src="{{BOWER_URL}}semantic-ui/dist/semantic.min.js"></script>    
 
-    <script src="{{BOWER_URL}}bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="{{BOWER_URL}}bootstrap-material-design/dist/js/ripples.min.js"></script>
-    <script src="{{BOWER_URL}}bootstrap-material-design/dist/js/material.min.js"></script>
+
 
     <script>
         $(document).ready(function() {  
-                $.material.init();               
+              //  $.material.init();               
         });
     </script>
 
