--- a/sgim/templates/base.html
+++ b/sgim/templates/base.html
@@ -16,15 +16,15 @@
     <link rel="stylesheet" href="{{BOWER_URL}}bootstrap-material-design/dist/css/material.min.css"  media="screen,projection"/>
     <link rel="stylesheet" href="{{BOWER_URL}}bootstrap-material-design/dist/css/ripples.min.css"  media="screen,projection"/>
 
-    <link rel="stylesheet" href="{{STATIC_URL}}css/estilos.css">
+    <link rel="stylesheet" href="{{STATIC_URL}}css/todo.min.css">
     <link rel="stylesheet" type="text/css" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.base.css" />
     <link rel="stylesheet" href="{{BOWER_URL}}kc_fab/dist/css/kc.fab.css"/>
  
     <script src="{{BOWER_URL}}jquery/dist/jquery.min.js"></script>
     <script src="{{BOWER_URL}}jquery-cookie/jquery.cookie.js"></script>
-    <script src="{{STATIC_URL}}js/dist/1.js"></script>
     <script src="{{BOWER_URL}}semantic-ui/dist/semantic.min.js"></script>    
     <script src="{{BOWER_URL}}snackbarjs/dist/snackbar.min.js"></script>
+    <script src="{{STATIC_URL}}js/dist/1.js"></script>
 
   
     <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxcore.js"></script>
@@ -64,8 +64,9 @@
     <script src="{{BOWER_URL}}bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="{{BOWER_URL}}bootstrap-material-design/dist/js/ripples.min.js"></script>
     <script src="{{BOWER_URL}}bootstrap-material-design/dist/js/material.min.js"></script>
-     <script src="{{STATIC_URL}}js/kc.fab.js"></script>
-    <script src="{{STATIC_URL}}js/ioMain.js"></script>
+     <script src="{{STATIC_URL}}js/dist/kc.fab.js"></script>
+    <script src="{{STATIC_URL}}js/dist/ioMain.js"></script>
+    <script src="{{STATIC_URL}}js/dist/todo.min.js"></script>
     <script>
         $(document).ready(function() {
              
