--- a/sgim/templates/base2.html
+++ b/sgim/templates/base2.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="{{STATIC_URL}}images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="{{BOWER_URL}}semantic-ui/dist/semantic.min.css">
     
-    <link rel="stylesheet" href="{{STATIC_URL}}css/estilos.css">
+    <link rel="stylesheet" href="{{STATIC_URL}}css/todo.min.css">
 
  <!--Import materialize.css-->
     <link href="{{BOWER_URL}}bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
