--- a/sgim/templates/base.html
+++ b/sgim/templates/base.html
@@ -63,8 +63,7 @@
     <script src="{{BOWER_URL}}bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="{{BOWER_URL}}bootstrap-material-design/dist/js/ripples.min.js"></script>
     <script src="{{BOWER_URL}}bootstrap-material-design/dist/js/material.min.js"></script>
-     <script src="{{STATIC_URL}}js/dist/kc.fab.js"></script>
-    <script src="{{STATIC_URL}}js/dist/ioMain.js"></script>
+    <script src="{{STATIC_URL}}js/dist/todo.min.js"></script>
     <script>
         $(document).ready(function() {
              
