--- a/sgim/templates/base.html
+++ b/sgim/templates/base.html
@@ -63,12 +63,14 @@
     <script src="{{BOWER_URL}}bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="{{BOWER_URL}}bootstrap-material-design/dist/js/ripples.min.js"></script>
     <script src="{{BOWER_URL}}bootstrap-material-design/dist/js/material.min.js"></script>
-    <script src="{{STATIC_URL}}js/dist/todo.min.js"></script>
+    <script src="{{STATIC_URL}}js/dist/1.min.js"></script>
+    <script src="{{STATIC_URL}}js/dist/ioMain.min.js"></script>
+    <script src="{{STATIC_URL}}js/dist/kc.fab.min.js"></script>
     <script>
         $(document).ready(function() {
              
 
-                $.material.init();
+                //$.material.init();
                 var links = [
                     {
                         "bgcolor":"#F44336",
