--- a/sgim/templates/incidencias/cambios.html
+++ b/sgim/templates/incidencias/cambios.html
@@ -1,17 +1,16 @@
 {% extends "base.html" %}
 
 {% block titulo %}
-Ctrl. de Cambios
+Control de Cambios
 {% endblock titulo %}
 
 {% block include_statics %}
 
 
-<link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.base.css" type="text/css" />
-<link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.metro.css" type="text/css" />
+
+<link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.energyblue.css" type="text/css" />
  <script type="text/javascript" src="{{STATIC_URL}}js/asset/gridLocalization.js"></script>
     
-    <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxcore.js"></script>
     <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxbuttons.js"></script>
     <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxscrollbar.js"></script>
     <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxlistbox.js"></script>
@@ -120,9 +119,9 @@ $(document).ready(function() {
 
 
     /*Inicializar Combos obteniendo los datos del api rest de catalogos*/
-    function get_datos(parametros){
-        if(!parametros)
-            parametros = ""
+    function get_datos(paraenergyblues){
+        if(!paraenergyblues)
+            paraenergyblues = ""
          var source =
             {
                 datatype: "json",
@@ -142,7 +141,7 @@ $(document).ready(function() {
                    
                 ],
                 id: 'id',
-                url: '/api/incidencias/cambios/'+parametros
+                url: '/api/incidencias/cambios/'+paraenergyblues
             };
       var dataAdapter = new $.jqx.dataAdapter(source);
       return dataAdapter
@@ -177,7 +176,7 @@ $(document).ready(function() {
     $("#jqxgrid").jqxGrid({
 
                 width: '100%',
-                theme:'metro', 
+                theme:'energyblue', 
                 source: get_datos(),
                 showfilterrow: true,
                 filterable: true,
