--- a/sgim/templates/incidencias/nuevo_cambio.html
+++ b/sgim/templates/incidencias/nuevo_cambio.html
@@ -1,7 +1,10 @@
 {% extends "base.html" %}
+{% block titulo %}
+    Nuevo Cambio
+{% endblock titulo %}
 {% block include_statics %}
 <link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.base.css" type="text/css" />
-<link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.metro.css" type="text/css" />
+<link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.energyblue.css" type="text/css" />
 
     
     <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxcore.js"></script>
@@ -201,7 +204,7 @@ $(document).ready(function() {
 	$("#id_titulo, #id_solicitante, #id_estado, #id_inicio_previsto, #id_responsable").addClass('form-control')
 
 	$('#id_proposito').jqxEditor({
-                width: '100%', theme:'metro',lineBreak:"br",
+                width: '100%', theme:'energyblue',lineBreak:"br",
                 tools:"bold italic underline  color background | left center right | outdent indent | ul ol | image | link | clean | html"
             });
 var today = new Date();
@@ -209,7 +212,7 @@ var yesterday = new Date(today);
 yesterday.setDate(today.getDate()-1);
 
     $("#inicio").jqxDateTimeInput({
-        theme:'metro',min: yesterday, firstDayOfWeek: 1
+        theme:'energyblue',min: yesterday, firstDayOfWeek: 1
     });
     
     
@@ -223,10 +226,10 @@ yesterday.setDate(today.getDate()-1);
             url: '/api/catalogo/personal/'
         };
         var personalAdapter = new $.jqx.dataAdapter(personalSource);
-    $("#id_responsable").jqxComboBox({ theme:'metro', promptText: "Quien efectuara el cambio...",source:personalAdapter, displayMember: 'nombre_completo',
+    $("#id_responsable").jqxComboBox({ theme:'energyblue', promptText: "Quien efectuara el cambio...",source:personalAdapter, displayMember: 'nombre_completo',
     	 valueMember: 'id'});
 
-    $("#id_solicitante").jqxComboBox({ theme:'metro', promptText: "Quien solicita el cambio...",source:personalAdapter, displayMember: 'nombre_completo',
+    $("#id_solicitante").jqxComboBox({ theme:'energyblue', promptText: "Quien solicita el cambio...",source:personalAdapter, displayMember: 'nombre_completo',
     	 valueMember: 'id'});
 
     var dispositivoSource =
@@ -241,7 +244,7 @@ yesterday.setDate(today.getDate()-1);
         };
         var dispositivoAdap = new $.jqx.dataAdapter(dispositivoSource);
 
-     $("#dispositivos").jqxComboBox({ theme:'metro', promptText: "Dispositivos que podrian ser afectados...",  source: dispositivoAdap, displayMember: 'posicion_logica', valueMember: 'id', multiSelect:true, width:'100%'});
+     $("#dispositivos").jqxComboBox({ theme:'energyblue', promptText: "Dispositivos que podrian ser afectados...",  source: dispositivoAdap, displayMember: 'posicion_logica', valueMember: 'id', multiSelect:true, width:'100%'});
      var servicioSource =
         {
             dataType: "json",
@@ -253,7 +256,7 @@ yesterday.setDate(today.getDate()-1);
         };
         var servicioAdap = new $.jqx.dataAdapter(servicioSource);
 
-     $("#servicios").jqxComboBox({ theme:'metro', width:'100%',
+     $("#servicios").jqxComboBox({ theme:'energyblue', width:'100%',
      	promptText: "Que servicios podrian ser afectados...",  source: servicioAdap, displayMember: 'nombre', valueMember: 'id', multiSelect:true});
 
     $("#enviar").on('click',  function(event) {
