--- a/sgim/templates/inventario/nuevo_servicio.html
+++ b/sgim/templates/inventario/nuevo_servicio.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
-
+{% block titulo %}
+    Nuevo Servicio
+{% endblock titulo %}
 {% block contenido %}
      <div class="ui purple menu">
           <a class="item">
