--- a/sgim/templates/inventario/servicios.html
+++ b/sgim/templates/inventario/servicios.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block titulo %}
+    Servicios
+{% endblock titulo %}
 
 {% block contenido %}
      <div class="ui purple menu">
