--- a/sgim/templates/gestion/evento_general.html
+++ b/sgim/templates/gestion/evento_general.html
@@ -6,12 +6,9 @@
 
 {% block include_statics %}
 
-
-<link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.base.css" type="text/css" />
-<link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.metro.css" type="text/css" />
+<link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.energyblue.css" type="text/css" />
  <script type="text/javascript" src="{{STATIC_URL}}js/asset/gridLocalization.js"></script>
     
-    <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxcore.js"></script>
     <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxbuttons.js"></script>
     <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxscrollbar.js"></script>
     <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxlistbox.js"></script>
@@ -127,7 +124,7 @@ $(document).ready(function() {
     $("#jqxgrid").jqxGrid({
 
                 width: '100%',
-                theme:'metro', 
+                theme:'energyblue', 
                 source: dataAdapter,
                 showfilterrow: true,
                 filterable: true,
