--- a/sgim/templates/gestion/hosts.html
+++ b/sgim/templates/gestion/hosts.html
@@ -6,12 +6,9 @@ Gestion de Red
 
 {% block include_statics %}
 
-
-<link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.base.css" type="text/css" />
-<link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.metro.css" type="text/css" />
+<link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.energyblue.css" type="text/css" />
  <script type="text/javascript" src="{{STATIC_URL}}js/asset/gridLocalization.js"></script>
     
-    <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxcore.js"></script>
     <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxbuttons.js"></script>
     <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxscrollbar.js"></script>
     <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxlistbox.js"></script>
@@ -132,9 +129,9 @@ $(document).ready(function() {
 
 
     /*Inicializar Combos obteniendo los datos del api rest de catalogos*/
-    function get_datos(parametros){
-    	if(!parametros)
-    		parametros = ""
+    function get_datos(paraenergyblues){
+    	if(!paraenergyblues)
+    		paraenergyblues = ""
     	 var source =
             {
                 datatype: "json",
@@ -156,7 +153,7 @@ $(document).ready(function() {
                    
                 ],
                 id: 'id',
-                url: '/api/gestion/hosts/'+parametros
+                url: '/api/gestion/hosts/'+paraenergyblues
             };
 	  var dataAdapter = new $.jqx.dataAdapter(source);
 	  return dataAdapter
@@ -224,7 +221,7 @@ $(document).ready(function() {
     $("#jqxgrid").jqxGrid({
 
                 width: '100%',
-                theme:'metro', 
+                theme:'energyblue', 
                 source: get_datos(),
                 showfilterrow: true,
                 filterable: true,
