--- a/sgim/templates/incidencias/nuevo_actividad_cambio.html
+++ b/sgim/templates/incidencias/nuevo_actividad_cambio.html
@@ -1,10 +1,12 @@
 {% extends "base.html" %}
+{% block titulo %}
+    Agregar seguimiento de Cambio
+{% endblock titulo %}
 {% block include_statics %}
-<link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.base.css" type="text/css" />
-<link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.metro.css" type="text/css" />
 
-    
-    <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxcore.js"></script>
+
+<link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.energyblue.css" type="text/css" />
+
     <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxbuttons.js"></script>
     <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxscrollbar.js"></script>
     <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxlistbox.js"></script>
@@ -169,11 +171,11 @@ $(document).ready(function() {
     yesterday2.setTime(yesterday2.getTime() + 60000);
 
       $("#inicio").jqxDateTimeInput({
-          theme:'metro',min: yesterday, firstDayOfWeek: 1,formatString: "dd/MM/yyyy HH:mm ",
+          theme:'energyblue',min: yesterday, firstDayOfWeek: 1,formatString: "dd/MM/yyyy HH:mm ",
       });
  
       $("#fin").jqxDateTimeInput({
-          theme:'metro',min: yesterday2, firstDayOfWeek: 1,formatString: "dd/MM/yyyy HH:mm ",
+          theme:'energyblue',min: yesterday2, firstDayOfWeek: 1,formatString: "dd/MM/yyyy HH:mm ",
       });
 
       $('#inicio ').jqxDateTimeInput('setDate', yesterday);
@@ -188,13 +190,13 @@ $(document).ready(function() {
       });
 
 		$('#id_descripcion').jqxEditor({
-                width: '100%', theme:'metro',lineBreak:"br",
+                width: '100%', theme:'energyblue',lineBreak:"br",
                 tools:"bold italic underline  color background | left center right | outdent indent | ul ol | image | link | clean | html"
             });
 
   /*	$("#tiempo").jqxNumberInput({ 
   		spinButtons: true, min: 0,
-  		theme:'metro',inputMode: 'simple',
+  		theme:'energyblue',inputMode: 'simple',
   		 decimalDigits: 0, disabled: true 
   		 });
 
@@ -220,7 +222,7 @@ $(document).ready(function() {
         };
         var cambioAdapter = new $.jqx.dataAdapter(cambioSource);
 
-    $("#id_cambio").jqxComboBox({ theme:'metro', promptText: "A que cambio se relaciona la actividad...", source:cambioAdapter, displayMember: 'titulo', valueMember: 'id', width:'90%'});
+    $("#id_cambio").jqxComboBox({ theme:'energyblue', promptText: "A que cambio se relaciona la actividad...", source:cambioAdapter, displayMember: 'titulo', valueMember: 'id', width:'90%'});
 
 
 $('#form').jqxValidator({
