--- a/sgim/templates/inventario/componentes.html
+++ b/sgim/templates/inventario/componentes.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
-
+{% block titulo %}
+    Componentes
+{% endblock titulo %}
 {% block contenido %}
      <div class="ui purple menu">
           <a class="item">
