--- a/sgim/templates/inventario/nuevo_componente.html
+++ b/sgim/templates/inventario/nuevo_componente.html
@@ -1,17 +1,12 @@
 {% extends "base.html" %}
+{% block titulo %}
+    Nuevo Componente
+{% endblock titulo %}
 
 {% block include_statics %}
-{% comment %}
-    
-
-    <script src="{{BOWER_URL}}w2ui/w2ui-1.4.2.min.js"></script>
-    <link rel="stylesheet" href="{{BOWER_URL}}w2ui/w2ui-1.4.2.min.css">
-{% endcomment %}
-<link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.base.css" type="text/css" />
-<link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.metro.css" type="text/css" />
+<link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.energyblue.css" type="text/css" />
 
     
-    <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxcore.js"></script>
     <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxbuttons.js"></script>
     <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxscrollbar.js"></script>
     <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxlistbox.js"></script>
@@ -162,7 +157,7 @@
         };
         var estadoAdapter = new $.jqx.dataAdapter(estadoSource);
 
-     $("#estado").jqxComboBox({ theme:'metro', promptText: "Estado Operacional...", 
+     $("#estado").jqxComboBox({ theme:'energyblue', promptText: "Estado Operacional...", 
         source: estadoAdapter,displayMember: 'text', valueMember: 'id'});
 
 var tipoSource =
@@ -176,7 +171,7 @@ var tipoSource =
         };
         var tipoAdapter = new $.jqx.dataAdapter(tipoSource);
 
-     $("#tipo").jqxComboBox({ theme:'metro', promptText: "Tipo de componente...",  source: tipoAdapter, displayMember: 'nombre', valueMember: 'id'});
+     $("#tipo").jqxComboBox({ theme:'energyblue', promptText: "Tipo de componente...",  source: tipoAdapter, displayMember: 'nombre', valueMember: 'id'});
 
      var isntalado =
         {
@@ -191,7 +186,7 @@ var tipoSource =
         };
         var isntaladoAdap = new $.jqx.dataAdapter(isntalado);
 
-     $("#instalado_en").jqxComboBox({ theme:'metro', promptText: "Instalado en...",  source: isntaladoAdap, 
+     $("#instalado_en").jqxComboBox({ theme:'energyblue', promptText: "Instalado en...",  source: isntaladoAdap, 
         displayMember: 'display', valueMember: 'id', autoComplete:true, searchMode: 'containsignorecase',
         width:'300px' });
       
