--- a/sgim/templates/inventario/nuevo_dispositivo2.html
+++ b/sgim/templates/inventario/nuevo_dispositivo2.html
@@ -1,16 +1,9 @@
 {% extends "material.html" %}
 
 {% block include_statics %}
-{% comment %}
-    
 
-    <script src="{{BOWER_URL}}w2ui/w2ui-1.4.2.min.js"></script>
-    <link rel="stylesheet" href="{{BOWER_URL}}w2ui/w2ui-1.4.2.min.css">
-{% endcomment %}
-<link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.base.css" type="text/css" />
-<link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.metro.css" type="text/css" />
+<link rel="stylesheet" href="{{BOWER_URL}}jqwidgets/jqwidgets/styles/jqx.energyblue.css" type="text/css" />
 
-<script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxcore.js"></script>
     <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxbuttons.js"></script>
     <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxscrollbar.js"></script>
     <script type="text/javascript" src="{{BOWER_URL}}jqwidgets/jqwidgets/jqxlistbox.js"></script>
@@ -232,7 +225,7 @@ $(document).ready(function() {
         var EdificiosAdapter = new $.jqx.dataAdapter(EdificiosSource);
 
      
-     $("#edificio").jqxComboBox({ source:EdificiosAdapter, theme:'metro'
+     $("#edificio").jqxComboBox({ source:EdificiosAdapter, theme:'energyblue'
         ,promptText: "Seleccione el edificio...", displayMember: 'text',
             valueMember: 'id'});
 
@@ -258,7 +251,7 @@ $(document).ready(function() {
             }
         }); 
 
-     $("#oficina").jqxComboBox({ theme:'metro', promptText: "Seleccione la oficina...", displayMember: 'text', valueMember: 'id'});
+     $("#oficina").jqxComboBox({ theme:'energyblue', promptText: "Seleccione la oficina...", displayMember: 'text', valueMember: 'id'});
 
 var sistemaSource =
         {
@@ -271,7 +264,7 @@ var sistemaSource =
         };
         var sistemaAdapter = new $.jqx.dataAdapter(sistemaSource);
 
-     $("#sistema").jqxComboBox({ theme:'metro', promptText: "Sistema al que pertenece...", source:sistemaAdapter, displayMember: 'text', valueMember: 'id'});
+     $("#sistema").jqxComboBox({ theme:'energyblue', promptText: "Sistema al que pertenece...", source:sistemaAdapter, displayMember: 'text', valueMember: 'id'});
 var estadoSource =
         {
             dataType: "json",
@@ -283,7 +276,7 @@ var estadoSource =
         };
         var estadoAdapter = new $.jqx.dataAdapter(estadoSource);
 
-     $("#estado").jqxComboBox({ theme:'metro', promptText: "Estado Operacional...", 
+     $("#estado").jqxComboBox({ theme:'energyblue', promptText: "Estado Operacional...", 
         source: estadoAdapter,displayMember: 'text', valueMember: 'id'});
 
 var tipoSource =
@@ -297,9 +290,9 @@ var tipoSource =
         };
         var tipoAdapter = new $.jqx.dataAdapter(tipoSource);
 
-     $("#tipo").jqxComboBox({ theme:'metro', promptText: "Tipo de Dispositivo...",  source: tipoAdapter, displayMember: 'text', valueMember: 'id'});
+     $("#tipo").jqxComboBox({ theme:'energyblue', promptText: "Tipo de Dispositivo...",  source: tipoAdapter, displayMember: 'text', valueMember: 'id'});
 
-    $("#instalacion").jqxDateTimeInput({theme:'metro', culture: 'es-MX'});
+    $("#instalacion").jqxDateTimeInput({theme:'energyblue', culture: 'es-MX'});
     $.getScript('{{BOWER_URL}}jqwidgets/jqwidgets/globalization/globalize.culture.es-MX.js', function () {
         $("#instalacion").jqxDateTimeInput({ culture: 'es-MX' });
     });
